<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:orientation="vertical"
        android:weightSum="1">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:theme="@style/toolbar_theme">

            <TextView
                android:id="@+id/dayTv"
                style="@android:style/TextAppearance.DeviceDefault.Large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Day 1"
                android:textColor="@color/colorAccent"
                android:textSize="20sp"
                android:textStyle="bold" />

        </android.support.v7.widget.Toolbar>

        <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView

                            android:id="@+id/homePageImage"

                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:src="@drawable/bottomback"/>

                    </LinearLayout>




                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:alpha="0.6"
                        android:background="@android:color/black"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:id="@+id/headerImgll">

                        <TextView


                            android:id="@+id/homePageTitle"

                            style="@style/TextAppearance.AppCompat.Headline"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/welcome_to_garbhsanskar"
                            android:textColor="@android:color/white"
                            android:textStyle="bold" />

                        <TextView


                            android:id="@+id/homePageTagline"

                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="10dp"
                            android:gravity="center"
                            android:text="@string/you_re_going_to_like_us"
                            android:textColor="@color/colorPrimaryDark"
                            android:textStyle="bold" />

                    </LinearLayout>

                </FrameLayout>

                <LinearLayout
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#F7F7F7"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:padding="5dp"
                    android:weightSum="0.9">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.3"
                        android:orientation="vertical">

                        <com.cuboid.cuboidcirclebutton.CuboidButton
                            android:id="@+id/buttonToday"
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:layout_gravity="center"
                            app:cub_border_radius="4dp"
                            app:cub_color="@color/colorPrimary"
                            app:cub_hover_color="@color/colorPrimaryDark"
                            app:cub_riple_effect="true"
                            />


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="Today"
                            android:textStyle="bold"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="12sp"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.3"
                        android:orientation="vertical">

                        <com.cuboid.cuboidcirclebutton.CuboidButton
                            android:id="@+id/buttonYesterday"
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:layout_gravity="center"
                            app:cub_border_radius="4dp"
                            app:cub_color="@color/colorPrimary"
                            app:cub_hover_color="@color/colorPrimaryDark"
                            app:cub_riple_effect="true" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="Yesterday"
                            android:textStyle="bold"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="12sp"
                            />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.3"
                        android:orientation="vertical">

                        <com.cuboid.cuboidcirclebutton.CuboidButton
                            android:id="@+id/buttonDaybfrystrday"
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:layout_gravity="center"
                            app:cub_border_radius="4dp"
                            app:cub_color="@color/colorPrimary"
                            app:cub_hover_color="@color/colorPrimaryDark"
                            app:cub_riple_effect="true" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/day_before_nyesterday"
                            android:textColor="@color/colorPrimaryDark"
                            android:textStyle="bold"
                            android:textSize="12sp" />

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical">

                    <TextView
                        style="@style/TextAppearance.AppCompat.Headline"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:padding="10dp"
                        android:text="@string/introduction"
                        android:textColor="@android:color/black"
                        android:textStyle="bold" />


                    <TextView
                        style="@style/TextAppearance.AppCompat.Medium"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:padding="10dp"
                        android:text="@string/the_science_behind_garbh_sanskar" />

                    <!--<TextView-->

                    <!--<TextView-->
                        <!--style="@style/TextAppearance.AppCompat.Medium"-->
                        <!--android:layout_width="match_parent"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--android:gravity="center"-->
                        <!--android:padding="10dp"-->
                        <!--android:text="@string/the_science_behind_garbh_sanskar" />-->

                    <TextView
                        android:id="@+id/homePageDescription"

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:padding="10dp"
                        android:text="@string/text_desc" />

                </LinearLayout>

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"

        android:visibility="visible">

        android:visibility="gone">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

        <LinearLayout
            android:layout_width="135dp"
            android:layout_height="380dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center"
                android:src="@mipmap/ic_reply_white_24dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="135dp"
            android:layout_height="385dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left|bottom"
                android:src="@mipmap/ic_checked"/>
                android:layout_gravity="bottom|center"
                android:src="@drawable/ic_comment_text_black_24dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="385dp"
            android:orientation="horizontal">

        <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:src="@mipmap/ic_reply_white_24dp"/>

        </LinearLayout>

        </LinearLayout>

    </FrameLayout>


        <!--<View-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="320dp">-->
        <!--</View>-->


        <!--<TextView-->
            <!--android:id="@+id/imageView"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"/>-->



    <android.support.design.widget.NavigationView
        android:id="@+id/nvView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@android:color/white"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/drawer_view" />

</android.support.v4.widget.DrawerLayout>